sumo/tests/traci/VariableRetrieval/Lane/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 0xa3 0xff dummy
simstep 6 1
